plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyMgmtVersion}"
    id 'java'
    id 'application'
}

group = 'com.dreamy'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
    }
}

dependencies {
    // ── Spring Boot ──────────────────────────────────────────────
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // ── RabbitMQ：spring-amqp（dreamy.events 事件拓扑，BE-DIM-4；dev 缺省 stub 不连 broker）──
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // ── huihao 内部库（Nexus 私仓）────────────────────────────────
    implementation "com.huihao:huihao-mysql:${huihaoVersion}"
    implementation "com.huihao:huihao-base:${huihaoVersion}"
    implementation("com.huihao:huihao-web:${huihaoVersion}") {
        // huihao-web 将 Nacos Discovery 声明为必选传递依赖，但本单体服务不使用注册中心。
        // 移除整个 starter，避免无用的 Nacos 客户端二次配置 Logback 文件 appender。
        exclude group: 'com.alibaba.cloud', module: 'spring-cloud-starter-alibaba-nacos-discovery'
    }
    implementation "com.huihao:huihao-redis:${huihaoVersion}"

    // ── MyBatis-Plus（huihao-mysql 不自带，需显式引入）──────────────
    implementation "com.baomidou:mybatis-plus-spring-boot3-starter:${mybatisPlusVersion}"
    implementation "com.baomidou:mybatis-plus-jsqlparser:${mybatisPlusVersion}"

    // ── 缓存：JetCache（两级缓存，消费端只读接口）──────────────────
    implementation "com.alicp.jetcache:jetcache-starter-redis-lettuce:${jetcacheVersion}"
    implementation "com.alicp.jetcache:jetcache-anno:${jetcacheVersion}"
    // kryo5 远端值编码（替代 java 序列化：DTO 无需 Serializable，且外部类 huihao.page.Paginated 不可改）
    implementation 'com.esotericsoftware.kryo:kryo5:5.6.2'

    // ── Redis：spring-data-redis（OTP 频控/会话有效性缓存）──────────
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // ── Redisson（huihao-redis 分布式锁 + huihao-mysql DdlAuto 类加载依赖）──
    implementation "org.redisson:redisson:${redissonVersion}"

    // ── Hibernate 注解（compile-only，提供 @DynamicInsert/@DynamicUpdate）──
    compileOnly 'org.hibernate.orm:hibernate-core'

    // ── BCrypt 密码哈希（spring-security-crypto，无需整套 security）──
    implementation 'org.springframework.security:spring-security-crypto'

    // ── JWT ──────────────────────────────────────────────────────
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    // ── OIDC（Google/Apple 校验）─────────────────────────────────
    implementation "com.nimbusds:nimbus-jose-jwt:${nimbusJoseJwtVersion}"

    // ── Database driver ──────────────────────────────────────────
    runtimeOnly "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"

    // ── MapStruct（Lombok 必须先于 MapStruct）─────────────────────
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${mapstructLombokBindingVersion}"

    // ── Lombok ───────────────────────────────────────────────────
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // ── Jackson ──────────────────────────────────────────────────
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // ── Test ─────────────────────────────────────────────────────
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Testcontainers（真 MySQL + Redis 集成测试，严格零 Mock）
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mysql'
    // JNA 5.13（Testcontainers 默认）在 JDK25 上 Unsafe 初始化失败，强制升级
    testImplementation 'net.java.dev.jna:jna:5.17.0'
    testImplementation 'net.java.dev.jna:jna-platform:5.17.0'
    testRuntimeOnly "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-parameters')
}

processResources {
    exclude 'oauth/**'
}

test {
    useJUnitPlatform()
    environment 'TESTCONTAINERS_RYUK_DISABLED', 'true'
    systemProperty 'testcontainers.startup.timeout', '300'
}

application {
    mainClass = 'com.dreamy.DreamyApplication'
}

bootJar {
    enabled = true
    archiveFileName = 'identity-app.jar'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
